--- a/contactme.html
+++ b/contactme.html
@@ -22,6 +22,6 @@
       <textarea name="yourMessage" rows="10" cols="30"></textarea>
       <input type="submit">
     </form>
-    <a href="mywebsite.html">Go back to main page</a>
+    <a href="index.html">Go back to main page</a>
   </body>
 </html>
